# multiomics_biocypher_kg

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Development_notebook.md  Gemini chat about config for omics.txt  OMICS_ADAPTER_QUICKSTART.md  README.md  agents.md  create_knowledge_graph.py  debug and exploration.ipynb  docker-compose.staging.yml  docker-compose.yml  docker_cheatsheet.md  eggnog_integration_plan.md  gemini chat about the schema.txt  gene_id_validation_report.txt  project_template_README.md  pyproject.toml
.claude/: settings.local.json
cache/: pdf_extraction_cache.json
config/: biocypher_config.yaml  biocypher_docker_config.yaml  gene_annotations_config.yaml  protein_annotations_config.yaml  schema_config.yaml  uninformative_terms.yaml
data/: Cyanorak  Organism Table  prochlorococcus.csv  Cyanorak  Organism Table  synechococcus.csv  cluster_extraction_report.md  cyanorak_roles.csv
doc/: AGENTS.md  cypher demo.txt  intro to kg 10032026.pptx  paperconfig_instructions.md
docs/: cluster_extraction_howto.md  community_proteomics_marref_saga.md  experiment_cluster_analysis_migration.md  experiment_node_migration.md  explorer_ortholog_migration.md  extraction_issues_log.md  gene_id_fields_spec.md  gene_id_resolution_report.md  kg_alpha_it_approval.md  kg_changes_treatment_type_background_factors.md  kg_mcp_guide.md  methods_functional_annotation.md  methods_gene_id_mapping.md  methods_omics_adapter.md  methods_pipeline_architecture.md  methods_position_fallback_merge.md  ortholog_group_enrichment.md
logs/: eggnog_overnight_2026-04-14.md  eggnog_overnight_orchestrator.py  eggnog_overnight_orchestrator.sh  overnight_run_2026-04-14.md
memory/: MEMORY.md
output/: import.report
plans/: 2026-04-30-explorer-asks-triage.md  alpha_release.md  download_test_coverage.md  drop_gene_properties.md  experiment_node_redesign.md  ez55_deploy.md  gene_annotation_edges.md  gene_annotation_improvements.md  gene_category.md  gene_id_mapping_utility.md  gene_id_mapping_v2_status.md  kg_changes_for_category_role_ontologies.md  kg_changes_for_pfam.md  mcp_gene_lookup_services.md  mit1002_deploy.md  orphan_proteins.md  ortholog_group_enrichment.md  ortholog_group_redesign.md  paper_readme_template.md  paper_sections_status.md  pfam_normalization.md  phase_1_paperconfig_standardization.md  phase_2_missing_env_conditions.md  phase_4_edge_split.md  protein_annotation_improvements.md  quarto_paper_setup.md  refactore_gene_add_eggnode.md  schema_improvements_for_mcp.md  table_scope.md
scripts/: analyze_alteromonas_orthologs.py  build.sh  build_gene_annotations.py  build_moreno2023_modified_csv.py  build_moreno2023_s3_modified_csv.py  download_genome_data.py  import.sh  (+17 more)
(+9355 files in other folders)
